- Fixed completer suggests DCO at wrong place.
- Fixed block-edit scroll behavior, when the cursor moved up the view now scrolls to the first line of the block selection.
- Improved GAMS license file, i.e. it now contains an empty line at the end of the file.
- Fixed a bug where the GDX Viewer would automatically switch to another symbol in some cases.

Version 1.20.3
==================
- Fixed missing universe domain in Reference File Viewer.
- Fixed dialog waiting for printer connection during Studio startup.
- Fixed selection of the default encoding, which was not persistent.
- Fixed Reset button in encodings dialog.
- Improved default selection of encodings, i.e. the ecodings dialog starts with a reduced pre-selection.
- Improved behavior when Studio is starting on a system with a reduced number of encodings. In this case the previous user selection is kept but might not be selectable.
- Improved block edit behaviour, i.e. backspace is blocked when the cursor is in the first column.

Version 1.20.2
==================
- Added an entry to clear the errors of the current project, to the context menu of the line numbers.
- Fixed state of the `Apply` button, when the `Update` settings have changed.
- Fixed the settings information `Last check date`, when checking for updates has been executed.
- Improved the text context menu entries for removing file(s) or project(s) listed in the Project View.
- Improved information message when the International Components for Unicode (ICU) support is missing.

Version 1.20.1
==================
- Fixed missing font update from changes in the Settings Dialog.
- Fixed Workspace cleanup Settings when Studio starts.
- Moved the list of files to be deleted to the details view when cleaning up workspace on startup.
- Dropped support for openSUSE Leap 15.6.
- Added support for Fedora 41 and Ubuntu 24.04 LTS.
- A GAMS Engine run from Studio can now select pool instances, too.